@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{695, 173}, {952, 1000}}</string>
+	<string>{{747, 120}, {964, 1037}}</string>
 </dict>
 </plist>
